@@ -1,3 +1,8 @@
+2008-09-03  Sergey Udaltsov <svu@gnome.org>
+
+	* gnome-keyboard-properties-xkbltadd.c: chosing first variant by
+	default (#550722)
+
 2008-07-27  Matthias Clasen  <mclasen@redhat.com>
 
 	* gnome-keyboard-properties.c: Revert this for now, since
